implemented pagination to list snippets or users
